// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavBar Component matches snapshot for dark variant 1`] = `
<DocumentFragment>
  <nav
    class="h-14 bg-[#1F2937] flex items-center justify-between px-6 flex-shrink-0"
  >
    <div
      class="flex items-center gap-3"
    >
      <svg
        fill="none"
        height="20"
        stroke="white"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
        <polyline
          points="9 22 9 12 15 12 15 22"
        />
      </svg>
      <span
        class="text-[19px] font-bold text-white tracking-tight"
      >
        IDHRTS
      </span>
      <span
        class="text-gray-500 mx-1"
      >
        |
      </span>
      <span
        class="text-[13px] text-gray-300 font-medium"
      >
        Test Portal
      </span>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-8 h-8 rounded-full bg-[#2563EB] flex items-center justify-center text-white text-[13px] font-bold select-none"
      >
        W
      </div>
      <button
        class="text-[13px] font-medium text-white border border-white/40 rounded px-3 py-1.5 hover:bg-white/10 transition-colors"
      >
        Logout
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar Component matches snapshot for light variant 1`] = `
<DocumentFragment>
  <nav
    class="h-14 bg-white border-b border-gray-200 flex items-center justify-between px-6 sticky top-0 z-30"
  >
    <div
      class="flex items-center gap-4"
    >
      <a
        class="flex items-center gap-2 shrink-0"
        href="/"
      >
        <svg
          fill="none"
          height="20"
          stroke="#2563EB"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        <span
          class="text-[19px] font-bold text-[#111827] tracking-tight"
        >
          IDHRTS
        </span>
      </a>
      <span
        class="text-[13px] font-medium text-gray-500 bg-gray-100 rounded-full px-3 py-1"
      >
        Test Portal
      </span>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center text-gray-500 shrink-0"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <button
        class="text-[13px] font-medium text-gray-700 border border-gray-300 rounded px-3 py-1.5 hover:bg-gray-50 transition-colors"
      >
        Logout
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar Component renders default light variant when variant is not provided 1`] = `
<DocumentFragment>
  <nav
    class="h-14 bg-white border-b border-gray-200 flex items-center justify-between px-6 sticky top-0 z-30"
  >
    <div
      class="flex items-center gap-4"
    >
      <a
        class="flex items-center gap-2 shrink-0"
        href="/"
      >
        <svg
          fill="none"
          height="20"
          stroke="#2563EB"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        <span
          class="text-[19px] font-bold text-[#111827] tracking-tight"
        >
          IDHRTS
        </span>
      </a>
      <span
        class="text-[13px] font-medium text-gray-500 bg-gray-100 rounded-full px-3 py-1"
      >
        Test Portal
      </span>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center text-gray-500 shrink-0"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <button
        class="text-[13px] font-medium text-gray-700 border border-gray-300 rounded px-3 py-1.5 hover:bg-gray-50 transition-colors"
      >
        Logout
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar Component renders default light variant when variant is undefined 1`] = `
<DocumentFragment>
  <nav
    class="h-14 bg-white border-b border-gray-200 flex items-center justify-between px-6 sticky top-0 z-30"
  >
    <div
      class="flex items-center gap-4"
    >
      <a
        class="flex items-center gap-2 shrink-0"
        href="/"
      >
        <svg
          fill="none"
          height="20"
          stroke="#2563EB"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        <span
          class="text-[19px] font-bold text-[#111827] tracking-tight"
        >
          IDHRTS
        </span>
      </a>
      <span
        class="text-[13px] font-medium text-gray-500 bg-gray-100 rounded-full px-3 py-1"
      >
        Test Portal
      </span>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center text-gray-500 shrink-0"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <button
        class="text-[13px] font-medium text-gray-700 border border-gray-300 rounded px-3 py-1.5 hover:bg-gray-50 transition-colors"
      >
        Logout
      </button>
    </div>
  </nav>
</DocumentFragment>
`;
